--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@nuxt/content": "^3.3.0",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/sitemap": "^7.2.9",
     "@nuxtjs/tailwindcss": "^6.13.2",
     "@tailwindcss/typography": "^0.5.16"
   }
